<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/yellow">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginStart="20sp"
            android:textSize="25sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_unit_temp"
            android:layout_marginStart="5dp"
            android:background="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <RadioGroup
            android:id="@+id/radiogp_donvi"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobtn_c"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/customs_radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/c"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radiobtn_f"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/f"
                android:button="@android:color/transparent"
                android:background="@drawable/customs_radio_selector"
                android:elevation="4dp"
                android:gravity="center"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_language"
            android:layout_marginStart="5dp"
            android:background="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>
        <RadioGroup
            android:id="@+id/radiogp_ngonngu"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobtn_vi"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/customs_radio_selector"
                android:elevation="4dp"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:text="@string/vi" />

            <RadioButton
                android:id="@+id/radiobtn_en"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/en"
                android:background="@drawable/customs_radio_selector"
                android:elevation="4dp"
                android:button="@android:color/transparent"
                android:gravity="center" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>