<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/customs_dialog"
    android:layout_margin="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changelocation"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="12dp"
        android:background="@drawable/customs_dialog_corner_topleft_topright"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:hint="@string/hanoivietnam"
            android:inputType="text"
            android:background="@drawable/customs_dialog_corner_border_gray"
            android:id="@+id/edt_nhapdiadiem" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="2">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_huy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/customs_textview"
                android:layout_marginEnd="20dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_timkiem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/customs_textview" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>