<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.3"
            android:orientation="horizontal"
            android:weightSum="4">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="1dp"
                android:layout_weight="0.5"
                android:background="@null"
                android:layout_gravity="center"
                tools:ignore="NestedWeights" />
            <TextView
                android:id="@+id/tv_diadiem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/customs_textview"
                android:gravity="center"
                android:text="@string/location"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="2.5"/>
            <ImageButton
                android:id="@+id/imgbtn_timkiem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_search_24"
                android:background="@null"
                android:layout_marginStart="2dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:scaleType="center"/>
            <ImageButton
                android:id="@+id/imgbtn_refresh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_refresh_24"
                android:background="@null"
                android:layout_marginStart="2dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:scaleType="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="8">

                <TextView
                    android:id="@+id/tv_nhietdo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textSize="55sp"
                    android:textStyle="bold"
                    android:layout_weight="2.75"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_trangthai"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1.25"
                    android:gravity="center|top"
                    android:layout_gravity="center|top"
                    android:text="@string/status"
                    android:textSize="17sp"
                    android:textColor="@color/black"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cirimg_trangthai"
                    android:layout_weight="4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    app:civ_border_width="3dp"
                    app:civ_border_color="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="7">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/detail"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/tv_apsuat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/pressure"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"/>
                <TextView
                    android:id="@+id/tv_doam"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/humidity"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"/>
                <TextView
                    android:id="@+id/tv_may"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/clouds"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"/>
                <TextView
                    android:id="@+id/tv_gio"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/windspeed"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"/>
                <TextView
                    android:id="@+id/tv_binhminh"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/sunrise"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"/>
                <TextView
                    android:id="@+id/tv_hoanghon"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/sunset"
                    android:layout_weight="0.9"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/yellow"
            android:layout_weight="1.4"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:weightSum="2"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_giocapnhat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/updatetime"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_ngaycapnhat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/updateday"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_thoitietgio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ngaytieptheo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/forecastforthenextdays"
            android:textAllCaps="false"
            android:background="@drawable/customs_button_next"
            />
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/layout_header_nav"
        app:menu="@menu/menu_nav">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
